Change database from mysql to postgresql

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -16,3 +16,7 @@ databaseChangeLog:
       file: src/main/resources/db/changelog/mydiff.yaml
   - include:
       file: src/main/resources/db/changelog/nextdiff.yaml
+  - include:
+      file: src/main/resources/db/changelog/diffPostgres.yaml
+  - include:
+      file: src/main/resources/db/changelog/diffPostgres-2.yaml
