--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,16 @@
 version: '3.8'
 services:
   db:
-    image: mysql:5.7
+    image: postgres:14.5
     restart: always
     environment:
-      MYSQL_DATABASE: 'todo'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_DB: ${POSTGRES_DB:-todo}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
+      # <Port exposed> : < POSTGRES Port running inside container>
+      - '5432:5432'
     volumes:
-      - my-db:/var/lib/mysql
+      - postgres-db:/var/lib/postgres
 volumes:
-  my-db:
+  postgres-db:
