--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/todo
-spring.datasource.username=${MYSQL_USER:user}
-spring.datasource.password=${MYSQL_PASSWORD:password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:todo}
+spring.datasource.username=${DATABASE_USER:user}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.default_schema=public
 spring.liquibase.enabled=false
