--- a/src/main/resources/db/changelog/diffPostgres-2.yaml
+++ b/src/main/resources/db/changelog/diffPostgres-2.yaml
@@ -1,12 +1,12 @@
 databaseChangeLog:
 - changeSet:
-    id: 1665785841657-1
+    id: 1668284690490-1
     author: Marian (generated)
     changes:
     - addColumn:
         columns:
         - column:
             name: priority
-            type: integer
+            type: int4
         tableName: task
 
