--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,7 +1,8 @@
+# suppress inspection "UnusedProperty" for whole file
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
-url=jdbc:mysql://localhost:3306/todo
+url=jdbc:postgresql://localhost:5432/todo
 username=user
 password=password
-driver=com.mysql.cj.jdbc.Driver
-referenceUrl=hibernate:spring:com.example.todo?dialect=org.hibernate.dialect.MySQL5Dialect
+driver=org.postgresql.Driver
+referenceUrl=hibernate:spring:com.example.todo?dialect=org.hibernate.dialect.PostgreSQL95Dialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 changeLogDirectory=src/main/resources/db/changelog
